sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  volumes:
  - name: shared-logs
    emptyDir: {}
  containers:
  - command:
    - sh
    - -c
    - "cat /etc/passwd | cut -f 1 -d ':' > /etc/foo/passwd"
    image: busybox
    name: busybox
    volumeMounts:
    - mountPath: /etc/foo
      name: shared-logs
    resources: {}
  - command:
    - sleep
    - "3600"
    image: busybox
    name: sidecar
    volumeMounts:
    - mountPath: /etc/foo
      name: shared-logs
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
