NetPol.yaml
## Allow traffic to pods in namespace finance only from pods in same namespace and on port 8080

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: finance-netpol
  namespace: finance
spec:
  podSelector: {} # match all pods in that namespace
  policyTypes:
    - Ingress $ 
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: finance # this is the label that the namespace should have
      ports:
        - protocol: TCP
          port: 8080
